package edu.fiuba.algo3.modelo.cartas.tiposDeCartaDesarrollo;

public abstract class CartasDesarrollo {

    protected int turnoDeCompra;
    protected boolean fueUsada;

    public CartasDesarrollo() {
        int turnoDeCompra = 1;
    }

    public CartasDesarrollo(int turnoDeCompra) {
        this.turnoDeCompra = turnoDeCompra;
        this.fueUsada = false;
    }

    public int conseguirPV() {
        return 0;
    }

    public boolean equals(Object otraCarta) {
        if (otraCarta == null) {
            return false;
        }
        if (this.getClass() != otraCarta.getClass()) {
            return false;
        }
        return true;
    }

    public boolean esJugable(ContextoCartaDesarrollo contexto) {
        return contexto.sePuedeJugarCarta(this.turnoDeCompra);
    }

    public abstract void usar(ContextoCartaDesarrollo contexto);

    public abstract CartasDesarrollo comprarCarta(int turnoActual);
}
